k8s/app-cliente-deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appCliente
  labels:
    app: appCliente
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appCliente
  template:
    metadata:
      labels:
        app: appCliente
    spec:
      containers:
        - name: appCliente
          image: mrpauloii/micro_cliente_lanchonete:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
