k8s/app-cozinha-deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-cozinha
  labels:
    app: app-cozinha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-cozinha
  template:
    metadata:
      labels:
        app: app-cozinha
    spec:
      containers:
        - name: app-cozinha
          image: mrpauloii/micro_cozinha_lanchonete:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
