k8s/app-pedido-deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appPedido
  labels:
    app: appPedido
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appPedido
  template:
    metadata:
      labels:
        app: appPedido
    spec:
      containers:
        - name: appPedido
          image: mrpauloii/micro_pedido_lanchonete:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
