k8s/service-app-cliente.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-cliente
spec:
  selector:
    app: appCliente
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
