k8s/service-app-cozinha.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-cozinha
spec:
  selector:
    app: app-cozinha
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
