k8s/service-app-pedido.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-pedido
spec:
  selector:
    app: app-pedido
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
